--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,24 @@
 name: ml_dataframe
 description: An in-memory untyped data storage with the possibility to query and modify it
-version: 1.6.0
+version: 1.6.1
+publish_to: none
 homepage: https://github.com/gyrdym/ml_dataframe
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ^3.1.3
 
 dependencies:
   csv: ^5.0.0
   json_annotation: ^4.0.0
-  ml_linalg: ^13.0.0
+  ml_linalg:
+    git:
+      url: https://github.com/ArunBabu98/ml_linalg
+      ref: xena
   quiver: ^3.0.0
 
 dev_dependencies:
   benchmark_harness: ^2.0.0
-  build_runner: ^1.10.11
+  build_runner: ^2.1.11
   json_serializable: ^4.0.0
   mockito: ^5.0.0
   pedantic: ^1.11.0
